Finished structure of Html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Travel Website</title>
 </head>
 <link rel="stylesheet" href="./style.css">
 <body>
+
+    <div class="Head 1">
+        <h1>Places I have visited.</h1>
+    </div>  
+
+   <div class="destination 1">
+        <h2>Eiffel Tower, Paris</h2>
+
+        <ul>
+            <li><strong>Location:</strong>Europe</li>
+            <li><strong>Season of year visited:</strong>Winter</li>
+            <li><strong>Memories:</strong>
+                <ul>
+                    <li>Ride on Seine River cruise</li>
+                    <li>Went to Arc de Triomphe</li>
+                    <li>Eating of different French cuisine</li>
+                </ul>
+            </li>
+        </ul>
+        <ul>
+            <li><strong>Recommendation:</strong>I would recommend visiting Paris</li>
+        </ul>
+
+    </div>
+
+<div class="destination 2">
+        <h2>Amazon River,Brazil</h2>
+        <ul>
+            <li><strong>Location:</strong>South America</li>
+            <li><strong>Season of year visited:</strong>Summer</li>
+            <li><strong>Memories:</strong>
+                <ul>
+                    <li>Seeing a 20foot Anaconda</li>
+                    <li>Taking a pic with Neymar</li>
+                    <li>Touching one of the worlds most deadliest spider</li>
+                </ul>
+            </li>
+        </ul>
+        <ul>
+            <li><strong>Recommendation:</strong>I would mildly recommend visiting Brazil</li>
+        </ul>
+    </div>
     
+    <div class="destination 3">
+        <h2>Maasai Mara,Kenya</h2>
+        <ul>
+            <li><strong>Location:</strong>Africa</li>
+            <li><strong>Season of year visited:</strong>Summer</li>
+            <li><strong>Memories:</strong>
+                <ul>
+                    <li>Seeing buffalos cross a river heading to Tanzania</li>
+                    <li>Enduring the high temperatures</li>
+                    <li>Eating the meat of a buffalo</li>
+                </ul>
+            </li>
+        </ul>
+        <ul>
+            <li><strong>Recommendation:</strong>I would highly recommend visiting Maasai Mara</li>
+        </ul>
+    </div>
+    
+    <script src="script.js"></script>
+
 </body>
 </html>
