--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="./style.css">
 <body>
 
-    <div class="Head 1">
+    <div class="Head">
         <h1>Places I have visited.</h1>
     </div>  
 
