--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 <link rel="stylesheet" href="./style.css">
 <body>
 
-    <div class="Head">
-        <h1>Places I have visited.</h1>
-    </div>  
+        <h1>Places I have visited</h1>
 
-   <div class="destination 1">
+   <div class="destination">
         <h2>Eiffel Tower, Paris</h2>
 
         <ul>
@@ -29,10 +27,10 @@
         <ul>
             <li><strong>Recommendation:</strong>I would recommend visiting Paris</li>
         </ul>
-
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSU2ZrOEt_Cumf7kIRU9Pjlnkm1479biPKg3tHXwAsMZnvlD3o9" alt="" height="200px" width="100%">
     </div>
 
-<div class="destination 2">
+<div class="destination">
         <h2>Amazon River,Brazil</h2>
         <ul>
             <li><strong>Location:</strong>South America</li>
@@ -48,9 +46,10 @@
         <ul>
             <li><strong>Recommendation:</strong>I would mildly recommend visiting Brazil</li>
         </ul>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRR1nl7Cg71gLQQ15Vh4C9EHQTGyJ73Klzl4w&s" alt="" height="200px" width="100%">
     </div>
     
-    <div class="destination 3">
+    <div class="destination">
         <h2>Maasai Mara,Kenya</h2>
         <ul>
             <li><strong>Location:</strong>Africa</li>
@@ -66,6 +65,7 @@
         <ul>
             <li><strong>Recommendation:</strong>I would highly recommend visiting Maasai Mara</li>
         </ul>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQkj8mn0Et6PXT3-wyz_KwUYZ6iCwEDP_sfow&s" alt="" height="200px" width="100%">
     </div>
     
     <script src="script.js"></script>
