Addition of div tag for all visieted places

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
         <h1>Places I have visited</h1>
 
-   <div class="destination">
+        <div class="button-container">
+<div class="destination">
         <h2>Eiffel Tower, Paris</h2>
 
         <ul>
@@ -67,6 +68,9 @@
         </ul>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQkj8mn0Et6PXT3-wyz_KwUYZ6iCwEDP_sfow&s" alt="" height="200px" width="100%">
     </div>
+        </div>
+
+   
     
     <script src="script.js"></script>
 
