--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 
         <h1>Places I have visited</h1>
 
-        <div class="button-container">
 <div class="destination">
+    <button id="europe">Europe</button>
+    <button id="southamerica">South America</button>
+    <button id="africa">Africa</button>
+</div>
+ 
+<!-- <div class="destination">
         <h2>Eiffel Tower, Paris</h2>
 
         <ul>
@@ -29,9 +34,9 @@
             <li><strong>Recommendation:</strong>I would recommend visiting Paris</li>
         </ul>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSU2ZrOEt_Cumf7kIRU9Pjlnkm1479biPKg3tHXwAsMZnvlD3o9" alt="" height="200px" width="100%">
-    </div>
+    </div> -->
 
-<div class="destination">
+<!-- <div class="destination">
         <h2>Amazon River,Brazil</h2>
         <ul>
             <li><strong>Location:</strong>South America</li>
@@ -68,7 +73,7 @@
         </ul>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQkj8mn0Et6PXT3-wyz_KwUYZ6iCwEDP_sfow&s" alt="" height="200px" width="100%">
     </div>
-        </div>
+        </div> -->
 
    
     
