Commited places div

--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 
         <h1>Places I have visited</h1>
 
+        <h2><p>When you press the buttons for this different places it will show a description of the place and a pic of the place.</p></h2>
+
 <div class="destination">
     <button id="europe">Europe</button>
     <button id="southamerica">South America</button>
     <button id="africa">Africa</button>
 </div>
+
+<div id="content"></div>
  
 <!-- <div class="destination">
         <h2>Eiffel Tower, Paris</h2>
